--- a/localisation/LegacyOfRome.csv
+++ b/localisation/LegacyOfRome.csv
@@ -207,7 +207,7 @@ EVTOPTALoR.841;这就是反抗我的下场.;;;;;;;;;;x
 EVTTOOLTIPLoR.842;城市守卫集合了.;;;;;;;;;;x
 EVTDESCLoR.842;从其他街区赶来的援军加入了守卫们，最后试图把暴徒们分割开来.在守卫们被下令放弃的街区，许多街坊正在燃烧，坠落物撒的满地都是，但人员伤亡相当小.;;;;;;;;;;x
 EVTOPTALoR.842;几个世纪后，暴乱行为将彻底灭绝.;;;;;;;;;;x
-EVTDESCLoR.846;[From.GetFirstName]，你不知羞耻的女儿	看起来已经疯狂的爱上北欧卫队的一名年轻队员，而且那男人也爱她.她向你请求能够和那男人结婚.他很显然被认为是在寒冷北方的一名小贵族，但几乎不会是一支"潜力股".;;;;;;;;;;x
+EVTDESCLoR.846;你那不知廉耻的女儿[From.GetFirstName]看起来已经疯狂的爱上北欧卫队的一名年轻队员，而且那男人也爱她。她向你请求能够和那男人结婚。据说他被认为是在寒冷北方的一名小贵族，但几乎不会是一支“潜力股”。.;;;;;;;;;;x
 EVTOPTALoR.846;很好，只要这会让她开心.;;;;;;;;;;x
 EVTOPTBLoR.846;天啊，门也没有.;;;;;;;;;;x
 EVTOPTCLoR.846;处决那个男人！;;;;;;;;;;x
