--- a/localisation/v1_102.csv
+++ b/localisation/v1_102.csv
@@ -4,7 +4,7 @@ enatic_desc;只有女性能继承头衔;;;;;;;;;;x
 enatic_cognatic;女性优先;;;;;;;;;;x
 enatic_cognatic_desc;男性仅在没有合法女性可以继承的情况下才会得到继承权.;;;;;;;;;;x
 enatic_succession;女性;;;;;;;;;;x
-enatic_succession_desc;只有女性可以继承;;;;;;;;;;x
+enatic_succession_desc;只有女性可以继承。;;;;;;;;;;x
 enatic_cognatic_succession;女性优先;;;;;;;;;;x
 enatic_cognatic_succession_desc;男性仅在没有合法女性可以继承的情况下才会得到继承权.;;;;;;;;;;x
 TRIGGER_ROOT;显性根元素;;;;;;;;;;x
