--- a/localisation/v2_10.csv
+++ b/localisation/v2_10.csv
@@ -499,14 +499,14 @@ EVTOPTA_RoI_1050;很好！;;;;;;;;;;x
 EVTDESC_RoI_1051;一群客人在喧闹的宴会中静静地看着弄蛇人的表演。突然你听见一声尖叫，弄蛇人脸上露出了迷惑-看起来一条眼镜蛇从笼子里跑了出来，并且钻进人群中！;;;;;;;;;;x
 EVTOPTA_RoI_1051;不！;;;;;;;;;;x
 EVTDESC_RoI_1052;眼镜蛇钻到了桌子下面。一刻沉默后人群中传出一声大叫。眼镜蛇爬上了一名客人的膝盖，把他吓得半死！然后眼镜蛇迅速地钻出了窗外。;;;;;;;;;;x
-EVTOPTA_RoI_1052;再也不雇弄蛇人了。;;;;;;;;;;x
+EVTOPTA_RoI_1052;我们再也不雇耍蛇人了。;;;;;;;;;;x
 EVTDESC_RoI_1053;一名弄蛇人正在宴会上向客人表演，他正在用长笛向篮子里面的毒蛇吹奏着异域歌曲。突然你感到某个滑腻和冷冰冰的东西爬上了你的膝盖……;;;;;;;;;;x
 EVTOPTA_RoI_1053;啊啊啊！眼镜蛇！！;;;;;;;;;;x
 EVTDESC_RoI_1054;眼镜蛇钻到了桌子下面。一刻沉默后人群中传出一声凄惨的叫声。一名客人倒在地上剧烈地抽搐着，旁边的客人震惊地意识到他被眼镜蛇咬了。随着眼镜蛇迅速地钻出了窗外，这个倒霉的人也慢慢停止了抽搐，死了。;;;;;;;;;;x
 EVTOPTA_RoI_1054;哇！;;;;;;;;;;x
 EVTDESC_RoI_1055;眼镜蛇一路爬过地板，所有的客人都吓呆了。这时一名客人站了出来，迅速地抽出佩剑将蛇一刀斩断。;;;;;;;;;;x
 EVTOPTA_RoI_1055;好样的！;;;;;;;;;;x
-EVTDESC_RoI_1056;一名弄蛇人正在宴会上向客人表演，,突然一条眼镜蛇从弄蛇人的篮子里跑了出来！你迅速地站了出来，抽出佩剑将蛇一刀斩断。;;;;;;;;;;x
+EVTDESC_RoI_1056;一名耍蛇人正在宴会上向客人表演，突然一条眼镜蛇从耍蛇人的篮子里跑了出来！你迅速地站了出来，抽出佩剑将蛇一刀斩断。;;;;;;;;;;x
 EVTOPTA_RoI_1056;不要在家玩蛇。;;;;;;;;;;x
 EVTTITLE_RoI_1060;决斗;;;;;;;;;;x
 EVTDESC_RoI_1060;宴会上有一个人始终用戏谑的眼光盯着你。他一定在嘲笑你，或者想要加害于你。你试图将一切抛诸脑后，但是他那鬼鬼祟祟的行为让你不得不相信：他一定在想怎样将你洗劫一空。;;;;;;;;;;x
@@ -625,21 +625,21 @@ EVTDESC_RoI_1173;排灯节的最黑暗的夜晚是在这里，宴中最重要的
 EVTOPTA_RoI_1173;让我们庆祝吧！;;;;;;;;;;x
 EVTDESC_RoI_1175;T他在排灯节中最黑暗的夜晚是在这里，宴中最重要的夜晚。蜡烛和灯到处都是，客人们穿着花裙子漫步穿过彩绘，装饰地板。丰富的，甜的食物供应丰富。大雄祖师，玛哈维拉，正在庆祝，庆祝善良战胜邪恶和知识战胜愚昧。;;;;;;;;;;x
 EVTOPTA_RoI_1175;让我们庆祝吧！;;;;;;;;;;x
-EVTDESC_RoI_1177;卡利法会的最黑暗的夜晚是在这里，宴中最重要的夜晚。蜡烛和灯到处都是，它们被放在人类头骨内。客人穿过彩绘，装饰地板，象征着死亡和变化的各种符号。用剑来对头骨和头颅在自己手中的美丽而恐怖的四臂人像表达敬意。;;;;;;;;;;x
+EVTDESC_RoI_1177;迦梨时母法会的最黑暗的夜晚是在这里，宴中最重要的夜晚。蜡烛和灯到处都是，它们被放在人类头骨内。客人穿过彩绘，装饰地板，象征着死亡和变化的各种符号。用剑来对头骨和头颅在自己手中的美丽而恐怖的四臂人像表达敬意。;;;;;;;;;;x
 EVTOPTA_RoI_1177;让仪式开始。;;;;;;;;;;x
 EVTOPTB_RoI_1177;让我们在今年做些额外的事情...;;;;;;;;;;x
-EVTDESC_RoI_1178;卡莉是我们的母亲，时间，死亡和黑暗夜晚的女神。她必须得到适当尊重，你只需要记住正确的事情......;;;;;;;;;;x
+EVTDESC_RoI_1178;迦梨是我们的母亲，时间，死亡和黑暗夜晚的女神。她必须得到适当尊重，你只需要记住正确的事情......;;;;;;;;;;x
 EVTOPTA_RoI_1178;我们将牺牲一个囚犯...;;;;;;;;;;x
 EVTOPTB_RoI_1178;我们将在那边牺牲那个仆人。;;;;;;;;;;x
 EVTOPTC_RoI_1178;我们将牺牲10个大象并用血粉刷墙壁。;;;;;;;;;;x
-EVTDESC_RoI_1179;[From.GetFullName] 尖叫声为 [From.GetSheHe] 被拖到卡莉的伟大雕像前. 神殿守卫将 [From.GetHerHim] 按倒, 牧师拿出长剑，刺向 [From.GetHerHim] 身体右侧，并穿过心脏。然后 [From.GetHerHis] 喉咙被割断，他的血液被收集在用人类头骨制成的碗里，传递给客人们饮用。;;;;;;;;;;x
+EVTDESC_RoI_1179;[From.GetFullName] 尖叫着， [From.GetSheHe] 被拖到迦梨的伟大雕像前. 神殿守卫将 [From.GetHerHim] 按倒, 祭司抽出奎师梵剑，刺向 [From.GetHerHim] 身体右侧，并穿过心脏。然后 [From.GetHerHis] 喉咙被割断，他的血液被收集在用人类头骨制成的碗里，传递给客人们饮用。;;;;;;;;;;x
 EVTOPTA_RoI_1179;这确实是一个快乐的时刻！;;;;;;;;;;x
-EVTDESC_RoI_1181;仆人尖叫，他被守卫抓住，然后拖向卡莉的伟大偶像。神殿守卫在大殿前将他压伏，一个牧师拿出长剑，然后刺中他身体的右侧，并穿过心脏。然后，他的喉咙被切断，血液被收集在人类头骨碗中传递给客人们饮用。;;;;;;;;;;x
+EVTDESC_RoI_1181;仆人尖叫着，他被守卫抓住拖向迦梨的伟大偶前像。神殿守卫在大殿前将他压伏，一个祭司抽出奎师梵剑，从他身体的右侧刺穿了心脏。然后，他的喉咙被切断，血液被收集在人头骨碗中传递给客人们饮用。;;;;;;;;;;x
 EVTTITLE_RoI_1183;用鲜血进行一个庆典;;;;;;;;;;x
 EVTDESC_RoI_1183;一个大型的大象被领进大厅。它被绳索和铁链拴住，然后用剑刺伤，它尖叫着，直到它死亡。客人观看惊悚的魅力。死亡的一个长期的，血腥的，不和谐的演唱会 - 该过程，用九个大象重复。结束后，地板变成血湖。几个法师迈步向前，拿着刷子，在血液中行走。他们在血液中浸刷子然后开始画壁画，用可怕的，湿的和深色油漆最终覆盖它们。气味令人作呕。;;;;;;;;;;x
-EVTOPTA_RoI_1183;赞美卡莉, 我们的母亲!;;;;;;;;;;x
+EVTOPTA_RoI_1183;赞美迦梨, 我们的母亲!;;;;;;;;;;x
 EVTDESC_RoI_1188;一些黑山羊由祭司带进来。山羊被放置在一个大型雕像前，然后他们的喉咙被切开。血液被收集在用人类头骨制成的碗里呈现给人群。一个吟诵出现，然后欢呼，因为向死亡女神，时间女神，黑夜女神进行的神圣献祭已经完成;;;;;;;;;;x
-EVTOPTA_RoI_1188;赞美卡莉, 我们的母亲!;;;;;;;;;;x
+EVTOPTA_RoI_1188;赞美迦梨, 我们的母亲!;;;;;;;;;;x
 horse_archers_offensive;弓骑兵攻击;;;;;;;;;;x
 horse_archers_defensive;弓骑兵防御;;;;;;;;;;x
 horse_archers_morale;弓骑兵士气;;;;;;;;;;x
@@ -812,7 +812,7 @@ EVTOPTB_RoI_150;不,我们应该悬赏相关信息.;;;;;;;;;;x
 EVTDESC_RoI_151;一个年轻的旅人声称关于失踪事件他有重要的线索,不仅要求赏金,而且要同你单独会面.;;;;;;;;;;x
 EVTOPTA_RoI_151;好,召他前来.;;;;;;;;;;x
 EVTNAME_RoI_152;不速之客......;;;;;;;;;;x
-EVTDESC_RoI_152;年轻人走进王座室，小心翼翼的环顾四周。他抬起头，说他带来了好消息，然后将手伸进他的外套。他翻出......投掷刀！他扔向了你，喊到：'我们的母亲卡莉将收获属于她的东西!' [From.GetFullName] 反应并投掷 [From.GetHerselfHimself] 在你面前, 拯救你的生命，但牺牲 [From.GetHerHis] 他自己, 通过一把穿过心脏的刀。 奇怪的青年迅速逃离，跑过惊讶的守卫。;;;;;;;;;;x
+EVTDESC_RoI_152;年轻人走进王座室，小心翼翼的环顾四周。他抬起头，说他带来了好消息，然后将手伸进他的外套。他翻出......投掷刀！他扔向了你，喊到：'我们的母亲迦梨将收获属于她的东西!' [From.GetFullName] 反应并投掷 [From.GetHerselfHimself] 在你面前, 拯救你的生命，但牺牲 [From.GetHerHis] 他自己, 通过一把穿过心脏的刀。 奇怪的青年迅速逃离，跑过惊讶的守卫。;;;;;;;;;;x
 EVTOPTA_RoI_152;有刺客! [From.GetTitledFirstName]救我!;;;;;;;;;;x
 EVTDESC_RoI_153;行刺事件后, 你与阁臣开了一个会. 他们都同意必须强硬对付这帮恶徒.;;;;;;;;;;x
 EVTOPTA_RoI_153;好, 出兵吧.;;;;;;;;;;x
