--- a/localisation/v2_20b.csv
+++ b/localisation/v2_20b.csv
@@ -143,7 +143,7 @@ ERA_CHAR_INFO_170258;穆罕默德而是是图格鲁克族长, 他在印度建立
 ERA_SELECTION_TEXT;每个时代都有其特点和挑战. 每个时代其中一些有趣的是:\n- 早期中世: 加洛林帝国, 皮克特人, 最早的维京劫掠, 建立神圣罗马帝国, 拜占庭帝国和圣象破坏运动.\n- 维京时代: 维京人国度, 犹太教可萨人, 加洛林帝国的继任者, 倭马亚和罗湿陀罗拘陀.\n- 中世盛世: 征服者威廉, 塞尔柱突厥, 基辅罗斯, 分裂的西班牙和拉贾斯坦. 拜占庭最晚可用年份.\n- 蒙古时代: 金帐汗国, 伊尔汗国, 印度的穆斯林古拉姆.\n- 晚期中世: 百年战争, 奥斯曼, 立陶宛, 蒙古汗国, 图格鲁克王朝, 基督教下的西班牙.;;;;;;;;;;x
 convert_to_parent_religion;皈依正统宗教;;;;;;;;;;x
 raise_tribal_units;召集部落军队;;;;;;;;;;x
-raise_tribal_units_desc;我可以召集忠心的 [Root.Culture.GetName]勇士以助战事. 我的名声在外,影响广泛,他们定会前来. 但和平到来,他们便会回家种田. 他们为荣誉而不是财富作战,但负责补给的仍然是我.;;;;;;;;;;x
+raise_tribal_units_desc;我可以召集忠诚的[Root.Culture.GetName]勇士以助战事。我的名声在外，影响广泛。他们定会前来。但是一旦和平到来，他们便会回归故里。虽然他们主要是为荣誉而非财富作战，但我仍需为他们支付补给。;;;;;;;;;;x
 EXPENSE_EVENT_LEVIES;事件军队维护费;;;;;;;;;;x
 EXPENSE_EVENT_FLEETS;事件船只维护费;;;;;;;;;;x
 HIRED_COSTS;雇佣兵维护费: §Y$MERC$§!\n事件军队维护费: §Y$EVENT$§!;;;;;;;;;;x
