--- a/localisation/text3.csv
+++ b/localisation/text3.csv
@@ -221,7 +221,7 @@ PROV28;萨默塞特;;;;;;;;;;x
 IS_LANDED;有封地;;;;;;;;;;x
 IS_NOT_LANDED;没有封地;;;;;;;;;;x
 STAT_INTRIGUE_DESC;密谋能力是间谍总管的主要属性。高密谋能力可提高发现阴谋和实施秘密行动（例如暗杀）的成功率。;;;;;;;;;;x
-STAT_STEWARDSHIP_CHAR_DESC;有§Y$VALUE$§!点财政技能，§Y[GetTitledFirstName]§!被认为是$DESC$管理者。这也会影响你的你的最大直辖领地规模。;;;;;;;;;;x
+STAT_STEWARDSHIP_CHAR_DESC;财政能力§Y$VALUE$§W的§Y[GetTitledFirstName]§W被认为是$DESC$管理者。这也会影响你的最大直辖领地规模。;;;;;;;;;;x
 EVTOPTB39000;太棒了！;;;;;;;;;;x
 HINT_LAW_VIEW_TEXT_3;王国和帝国可以实行王权法。这不仅会影响该国事实上的封臣，还会影响法理上的封臣。但事实国土外的异端和异教徒不受影响。;;;;;;;;;;x
 EVTDESC6212;我的邻居有着附近最性感的臀部，但是耶稣向我耳语说这样做是错误的。;;;;;;;;;;x
@@ -253,11 +253,11 @@ LOADING_TIP_37;有时最有才能的阁臣亦最为危险。谨慎行事。;;;;;
 LOADING_TIP_38;如果你是间谍头目，你针对自己领主的密谋成功率更高。;;;;;;;;;;x
 LOADING_TIP_39;使用你的廷牧转化郡和封臣的信仰。;;;;;;;;;;x
 LOADING_TIP_40;你的所有子嗣都会获得你头衔的宣称权。;;;;;;;;;;x
-LOADING_TIP_41;分封.少量直属封臣更为容易控制。;;;;;;;;;;x
+LOADING_TIP_41;分封少量直属封臣更为容易控制。;;;;;;;;;;x
 LOADING_TIP_42;如果盟友喜欢你的敌人胜过你，他们可能拒绝参与你的战争。;;;;;;;;;;x
 LOADING_TIP_43;你可以在直属封臣的领地上修建建筑。;;;;;;;;;;x
 LOADING_TIP_44;儿童往往会容易得到与其监护人相同的特质和技能。;;;;;;;;;;x
-LOADING_TIP_45;基督徒发动十字军远征，穆斯林发动吉哈德。;;;;;;;;;;x
+LOADING_TIP_45;基督徒发动十字军远征，穆斯林发动吉哈德圣战。;;;;;;;;;;x
 LOADING_TIP_46;贵族关注声望。宗教领袖关注虔诚。人人都关心金币。;;;;;;;;;;x
 LOADING_TIP_47;如果一位敌对教宗推翻了现任教宗，他会成为新的教宗。;;;;;;;;;;x
 DYNTREE_INFO_TT;树注释;;;;;;;;;;x
@@ -279,7 +279,7 @@ EVTDESC73244;我向[From.GetBestName]承诺[From.GetSheHe]有机会成为[Root.P
 tut_4b_6;检查工具条上你的封臣的好感度数值。他们对你的好感由很多事情决定，比如个人外交能力，授职法，王权等，另外个人特质之间的相性也会对你们之间的关系造成影响。如果你是耐心的人，而封臣是个易怒的人，你们的关系显然不会很好。;;;;;;;;;;x
 tut_4b_8;基于人物特质的好感修正是永久的。其他因素可能改变人物之间的好感度，但是只要特质不改变，特质修正就不会消失。接下来我们会说明非永久的好感因素。;;;;;;;;;;x
 tut_4b_12;你派遣掌玺大臣到这个郡伪造宣称权来实现目的。这会花费一定时间，你可以在基础战争教程里尝试.;;;;;;;;;;x
-tut_4c_5;在你妻子的肖像下方有一个蓝底双金环的图标，这个按钮可以允许你为这个人物安排婚姻。点击继续。;;;;;;;;;;x
+tut_4c_5;在你妻子的头像下方有一个蓝底双金环的图标，这个按钮可以允许你为这个人物安排婚姻。点击继续。;;;;;;;;;;x
 tut_4c_5a;选择;;;;;;;;;;x
 tut_4c_6;这里你能看到所有未婚女子的列表。不是所有人都适龄。有些萝莉过于年幼，只有双方都满16岁以上才能正式结婚。有些人又太老，已经无法生育后代了。还有些人对你毫无用处。为帮助你决策，善用各种排序按钮。点击下一步继续。;;;;;;;;;;x
 tut_4c_12;这里你可以看到婚姻将对你的威望产生的影响。你也可以看到她会答应你的提议，所以发送请求吧。;;;;;;;;;;x
