--- a/localisation/v1_10b.csv
+++ b/localisation/v1_10b.csv
@@ -62,6 +62,6 @@ west_african_pagan_reformed_succ_desc_1;已经加入了先祖的行列;;;;;;;;;;
 DE_JURE_INDP_DESC;法理独立成为§Y$TITLE$§!的进度(§Y$YEARS$§!/$NEEDED_YEARS$年);;;;;;;;;;x
 EVTDESC_TOG_4016;阁下贵体必定无恙吧，[Root.GetTitledFirstName].鄙人乃帕尔纳托克，致力于建立一个使众勇士们现身于托尔和奥丁的联盟。沿着沃尔海岸航行时，我发现了一个建立我们的具体的绝佳地点。因此，我希望能征得你的同意，把据点建立在这个岛屿上。\n\n叹气\n[From.GetTitledName];;;;;;;;;;x
 EVTDESC_TOG_4026;I祝您健康, [Root.GetTitledFirstName].  我叫包纳托基, 我自愿奔走组建一个为索尔与奥丁献身的勇士兄弟会. 在吕根的海滨航行时, 我发现了一个建设要塞的绝佳地址, 我请求您能让我使用那片土地.\n\n此致,\n[From.GetTitledName];;;;;;;;;;x
-INTERACTION_CONSORT_NOT_PREGNANT;不能让情妇怀孕。;;;;;;;;;;x
+INTERACTION_CONSORT_NOT_PREGNANT;不能让侍妾怀孕。;;;;;;;;;;x
 SETTLEMENT_LOOTED_LOG;§Y$SETTLEMENT$§! 被 §Y$LOOTER$§! 劫掠了，强盗劫走了 §Y$LOOT$§!¤;;;;;;;;;;x
 EVTDESC20377;主上, [From.Location.GetName]当地的贵族[FromFrom.GetTitledName]企图用暗杀让我永远闭嘴! 万幸的是我设法逃过此劫. 我会继续散播关于[FromFrom.GetHerHis]腐败的谣言, 以在[FromFrom.GetHerHis]封臣中败坏[FromFrom.GetHerHis]名声.\n\n您谦卑的间谍总管,\n[From.GetTitledName];;;;;;;;;;x
