--- a/localisation/v2_30.csv
+++ b/localisation/v2_30.csv
@@ -586,7 +586,7 @@ NOT_ENOUGH_PRESTIGE;(§RX§!) 拥有 §G$COST$§! 威望;;;;;;;;;;x
 ALLOW_FREE_VICEROY_REVOKATION_ON;可以任意收回总督公国头衔\n;;;;;;;;;;x
 ALLOW_FREE_VICEROY_REVOKATION_OFF;不再能任意收回总督公国头衔\n;;;;;;;;;;x
 REVOKE_TITLE_INTERACTION_2J;帝国行政法准许回收总督和大总督的头衔,无人会有意见.;;;;;;;;;;x
-action_build_zeal_desc;让你的 [GetLordSpiritualName] 鞭策人们更加虔诚, 增加你自身的虔诚并有机会吸引来狂热的战士. 如果你不利用这些勇士参与宗教战争,你反而会失去虔诚.;;;;;;;;;;x
+action_build_zeal_desc;让你的[GetLordSpiritualName]鞭策人们更加虔诚，增加你自身的虔诚并有机会吸引来狂热的战士。如果你不让这些勇士参与圣战，你反而会失去虔诚。;;;;;;;;;;x
 action_organize_raid_desc;让你的 [GetMarshalName] 组织人们参加劫掠,赢取荣耀和财富! 如果你不利用这些勇士去劫掠, 他们会愤怒地抢走你的钱.;;;;;;;;;;x
 action_build_legend_desc;让你的 [GetTreasurerName] 在人民中宣传你的传奇事迹, 增加你的威望并吸引勇士. 如果你不利用这些勇士作战, 你会失去威望.;;;;;;;;;;x
 INSULT_OLD;老头;;;;;;;;;;x
