--- a/localisation/v2_30f.csv
+++ b/localisation/v2_30f.csv
@@ -25,7 +25,7 @@ comfort_of_lover;情人的安慰;;;;;;;;;;x
 desc_comfort_of_lover;[GetFirstName]在情人的怀中得到安慰,使其暂时摆脱了 [GetPossPronoun]充满争吵的婚姻的困扰.;;;;;;;;;;x
 thrill_of_lover;禁断之爱的激情;;;;;;;;;;x
 opinion_dishonorable_duel;不诚信的决斗;;;;;;;;;;x
-dishonorable_duel_tooltip;这被认为是不诚信的行为,会引起他人的反感.;;;;;;;;;;x
+dishonorable_duel_tooltip;这被认为是不诚信的行为，会引起他人的反感。;;;;;;;;;;x
 desc_thrill_of_lover;[GetFirstName] 通过与[GetPossPronoun] 情人做一些羞羞的事情来从争吵不断的婚姻中获得暂时的解脱.;;;;;;;;;;x
 CIW_GOTOLOCATION_DEL;拉近显示角色在地图上的位置.;;;;;;;;;;x
 CIW_GOTOCHARREL_DEL;查看其他角色对本角色的看法.;;;;;;;;;;x
@@ -38,11 +38,11 @@ nick_the_black;黑人;;;;;;;;;;x
 WayOfLifeDLC;生活之道;;;;;;;;;;x
 IberianUnitPackDLC;伊比利亚单位包;;;;;;;;;;x
 IberianPortraitsDLC;伊比利亚肖像包;;;;;;;;;;x
-tut_0a_7b;提示：你可以右击角色肖像来打开该角色的外交菜单.;;;;;;;;;;x
-tut_4a_4;作为开始,右击你的同父异母兄弟,阿瑟尔伯爵马穆尔.你会发现她出现在家族界面的底端左侧,位于诸同辈亲属之首. (你在这里看到的肖像只是一个例子,并不是代表实际上的伯爵.);;;;;;;;;;x
+tut_0a_7b;提示：你可以右键点击角色头像来打开该角色的外交菜单.;;;;;;;;;;x
+tut_4a_4;作为开始，右键点击你的同父异母兄弟,阿瑟尔伯爵马穆尔。你会发现他出现在家族界面的底端左侧，位于诸同辈亲属之首。(你在这里看到的头像只是一个例子，并不是代表实际上的伯爵。);;;;;;;;;;x
 tut_4a_5;在左侧,我们可以看到可执行外交行动的菜单.在右侧你将可以修正外交选择,并且可以看到你的外交选择会造成怎样的结果.点击下一步继续.;;;;;;;;;;x
-tut_6a_12;现在是真正宣战的时刻了.那么在此再次点击S鴕oyar.右击肖像以打开外交菜单.;;;;;;;;;;x
-tut_4c_9;深思熟虑以采取最好的抉择,不要忘记婚姻对象所属的王朝及其头衔会影响你的威望值的得失.当你做好决定后,右击她的肖像以继续.;;;;;;;;;;x
+tut_6a_12;现在是真正宣战的时刻了。那么在此再次点击S鴕oyar。右键点击头像以打开外交菜单。;;;;;;;;;;x
+tut_4c_9;深思熟虑以采取最好的抉择,不要忘记婚姻对象所属的王朝及其头衔会影响你的威望值的得失.当你做好决定后,右键点击她的头像以继续.;;;;;;;;;;x
 ca_culture_moors_2;摩尔骑兵营;;;;;;;;;;x
 ca_culture_moors_3;摩尔骑兵营;;;;;;;;;;x
 ca_culture_moors_4;摩尔骑兵营;;;;;;;;;;x
