--- a/localisation/v2_81.csv
+++ b/localisation/v2_81.csv
@@ -4,7 +4,7 @@ china_physician_cd;§Y派遣一名医生§!;;;;;;;;;;x
 china_physician_cd_desc;你已经向中国派出一名医生了，你不能再派遣了。;;;;;;;;;;x
 temple_barony_of_taoist;道观;;;;;;;;;;x
 kow_tow_travels_death;在前往中华帝国的旅途中;;;;;;;;;;x
-EVT_DESC_JD_60314;[From.Offmap.Ruler.GetChineseComplimentAdjective] [From.Offmap.Ruler.GetTitle]的[From.GetTitle]向[Root.PrimaryTitle.GetFullName]的[Root.GetTitle]寄了封信。\n\n你辜负了[From.Offmap.Ruler.GetLongChineseEmperorName]的天恩。我们知道[FromFrom.GetChineseCharacterRole] [FromFrom.GetTitledName]的死是由你一手造成。不要以为[From.Offmap.Ruler.GetTitle]会轻饶此事。;;;;;;;;;;x
+EVT_DESC_JD_60314;[From.Offmap.Ruler.GetChineseComplimentAdjective] [From.Offmap.Ruler.GetTitle]的[From.GetTitle]向[Root.PrimaryTitle.GetFullName]的[Root.GetTitle]寄了封信。\n\n你辜负了[From.Offmap.Ruler.GetLongChineseEmperorName]的皇恩。我们知道[FromFrom.GetChineseCharacterRole] [FromFrom.GetTitledName]的死是由你一手造成。不要以为[From.Offmap.Ruler.GetTitle]会轻饶此事。;;;;;;;;;;x
 hostages_random_imprisonment_tt;你将随机逮捕目标的一名§Y近亲§!。;;;;;;;;;;x
 NOT_PACIFIED_BY_LIEGE_DATELESS;未被领主要求和平;;;;;;;;;;x
 RULES_ACHIEVEMENT_REQUIRE_NO_RULER_DESIGNER;不可使用§Y人物设计器§!;;;;;;;;;;x
@@ -14,11 +14,11 @@ OLD_SAVE_WARNING;§Y这是一个旧存档，加载它或会导致各种问题§!
 TRADE_ROUTE_GLOBAL_VALUE_CHANGED;外部因素使这个贸易路线的贸易价值增加$VALUE|+0%$.;;;;;;;;;;x
 NOT_ALLOWED_TO_PLAY_SAME_CHARACTER;你不能同其他玩家使用同一角色;;;;;;;;;;x
 chinese_grace_become_tributary_desc;向§Y[Root.Offmap.Ruler.GetMediumChineseEmperorName]§!表现你的忠诚。;;;;;;;;;;x
-chinese_grace_become_tributary_effect_TT;以§R50%收入§!、§R30%部队数额§!以及§R[GetChineseOffmapTributaryPrestigeCost]§!为代价，获得§G每月2点天恩§!以及§G在被攻击时可征召中国军团§!的能力。\n这些效果持续到§Y该朝代对中国统治的终结§!，或者通过（战争、决议）§Y得到独立§!后取消。\n;;;;;;;;;;x
+chinese_grace_become_tributary_effect_TT;以§R50%收入§!、§R30%部队数额§!以及§R[GetChineseOffmapTributaryPrestigeCost]§!为代价，获得§G每月2点皇恩§!以及§G在被攻击时可征召中国军团§!的能力。\n这些效果持续到§Y该朝代对中国统治的终结§!，或者通过（战争、决议）§Y得到独立§!后取消。\n;;;;;;;;;;x
 ENDGAME_TEXT_INDIAN;你皈依了东方宗教，但是没有印度罗阇或玉龙DLC，因此你不能再继续游戏了。\n;;;;;;;;;;x
 you_will_game_over_tt;§R你不能以这个宗教进行游戏，否则会导致游戏结束！§!\n;;;;;;;;;;x
 is_not_one_eyed_handed_legged_disfigured_or_mangled_tt;没有§Y独眼§!，§Y独臂§!，§Y独腿§!，§Y毁容§!，或§Y血肉模糊§!\n;;;;;;;;;;x
-is_not_maimed_or_infirm_tt;没有§Y残废§!或§Y年老体衰§!\n;;;;;;;;;;x
+is_not_maimed_or_infirm_tt;没有§Y残废§!或§Y体弱多病§!\n;;;;;;;;;;x
 is_not_wounded_severely_injured_tt;没有§Y受伤§!或§Y重伤§!\n;;;;;;;;;;x
 EVTTOOLTIP100201;你向你的朋友寻求帮助以提高剑术技能\n;;;;;;;;;;x
 String_personality_old_and_wistful;花有重开日，人再无少年;;;;;;;;;;x
