--- a/localisation/z_magne.csv
+++ b/localisation/z_magne.csv
@@ -1,3 +1,3 @@
 ﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
-bear.6.undo;这简直无法忍受！;;;;;;;;;;x
+bear.6.undo;这实在令人无法忍受！;;;;;;;;;;x
 UNDO_BEAR_TRANSFORMATION;醒来后，一切都恢复了正常。也许所有这些只不过是一场梦..……;;;;;;;;;;x
